--- a/datafusion/physical-plan/Cargo.toml
+++ b/datafusion/physical-plan/Cargo.toml
@@ -65,6 +65,7 @@ log = { workspace = true }
 parking_lot = { workspace = true }
 pin-project-lite = "^0.2.7"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = { workspace = true }
 tokio = { workspace = true }
 typetag = "0.2"
 
